# tucows-interview-exercise-ai

./: .gitignore  Makefile  README.md  cli.py  docker-compose.yml  dockerfile  pyproject.toml
data/: create_mock_pdf.py
data/raw/: CS_FAQ.txt  domain_suspension_guidelines.md
docs/: architecture.md  decisions.md  schedule.md
docs/diagrams/: faiss_doc_pipeline.md  rag_api_flow.md
docs/output/: architecture.docx  decisions.docx
src/: __init__.py  models.py
src/api/: main.py  models.py  web_logger.py
src/core/: __init__.py  llm_wrapper.py  prompt_builder.py  rag_pipeline.py  retrieval.py
src/data_handling/: __init__.py  embed_docs.py  embedder.py  parser.py
src/utils/: json_schemas.py  llm_helper.py  logger.py  logging_helper.py  validate_helper.py
tests/test_core/: test_llm_wrapper.py  test_prompt_builder.py  test_rag_pipeline.py  test_retrieval.py
tests/test_data_handling/: test_embed_docs.py  test_embedder.py  test_parser.py
