[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_rag_api"
version = "0.1.0"
description = "API with RAG backend"
authors = [{ name = "Jeremie Fraeys", email = "jfraeys@gmail.com" }]
dependencies = [
    "fastapi",
    "faiss-cpu",
    "llama-cpp-python",
    "uvicorn",
    "pydantic",
    "torch",
    "sentence-transformers",
    "pypdf",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov", "jupyter", "reportlab"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
addopts = "-ra -q --cov=src --cov-report=term-missing tests/"

